[package]
name = "rationals"
version = "0.1.0"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2.2", optional = true }
num-traits = { version = "0.2.8", optional = true }

[features]
default = []
use_bigint = ["num-bigint", "num-traits"]
